dev-ops/kubernetes/v1/hi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hi
  name: hi
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30232
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hi
  type: LoadBalancer
